--- a/static/styles.css
+++ b/static/styles.css
@@ -190,3 +190,15 @@ li {
     .autocomplete-item:hover {
       background-color: #e9e9e9;
     }
+
+#limeExplanationList {
+    color: black; /* Change to your desired color */
+}
+
+#limeExplanationList li {
+    color: black; /* Ensures list items have the same color */
+}
+
+#limeExplanation h2 {
+    color: black; /* Change to your preferred color */
+}
