--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
       <ul id="recommendationsLime"></ul>
       <div id="limeExplanation" style="display:none;">
         <h2>LIME Explanation for <span id="explainedTitleLime"></span></h2>
-        <ul id="limeExplanationList"></ul>
+        <ul id="limeExplanationList" style="color: #ff5733; font-weight: bold;"></ul>
       </div>
     </div>
     <div id="shap" class="tab-content" style="display:none;">
