--- a/static/styles.css
+++ b/static/styles.css
@@ -202,3 +202,7 @@ li {
 #limeExplanation h2 {
     color: black; /* Change to your preferred color */
 }
+
+#limeExplanationGeneral p {
+    color: black; /* Change to your preferred color */
+}
