--- a/static/styles.css
+++ b/static/styles.css
@@ -194,15 +194,14 @@ li {
 #limeExplanationList {
     color: black; /* Change to your desired color */
 }
-
-#limeExplanationList li {
+li {
     color: black; /* Ensures list items have the same color */
 }
 
-#limeExplanation h2 {
+h2 {
     color: black; /* Change to your preferred color */
 }
 
-#limeExplanationGeneral p {
+p {
     color: black; /* Change to your preferred color */
 }
