--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,9 @@
       <ul id="recommendationsLime"></ul>
       <div id="limeExplanation" style="display:none;">
         <h2>LIME Explanation for <span id="explainedTitleLime"></span></h2>
-        <p>These recommendations are formed using the description of your original book and using this to search for similar books. 
-          The LIME explanation displays the relevant words within the description and the "weight" of these words. 
-          The higher the number the more the word helped to identify this book as a good recommendation.<span id="limeExplanationGeneral"></span></p>
+          <p id="limeExplanationGeneral" style="display:none;">These recommendations are formed using the description of your original book and using this to search for similar books.
+          The LIME explanation displays the relevant words within the description and the weight of these words.
+          The higher the number the more the word helped to identify this book as a good recommendation.</p>
         <ul id="limeExplanationList"></ul>
       </div>
     </div>
