--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
   <div id="tabContentContainer">
     <!-- Tab content for No XAI, LIME, SHAP, Counterfactual -->
     <div id="noXAI" class="tab-content" style="display:none;">
-      <h2>No XAI Explanation</h2>
+      <h2>This tab does not have explanations</h2>
       <input type="text" id="bookTitleNoXAI" placeholder="Enter a book title">
       <div class="toggle-label">
         <input type="checkbox" id="includeSameAuthorNoXAI" checked>
